# pybmix

./: .gitignore  CMakeLists.txt  README.md
docs/: conf.py
docs/examples/: clustering_univ_data.ipynb  estimate_univ_density.ipynb  prior_elicitation.ipynb  test_run.py
pybmix/core/: fun.py  fun_non_conj.py  hierarchy.py  mixture_model.py
pybmix/core/pybmixcpp/: CMakeLists.txt  opaque.cc  opaque.h  py_global.cc  py_global.h  python_hierarchy.cc  python_hierarchy.h  run_mcmc.cc
pybmix/core/pybmixcpp/bayesmix/py_hier/: auxiliary_functions.cc  auxiliary_functions.h  python_hierarchy_non_conjugate.cc  python_hierarchy_non_conjugate.h
pybmix/core/pybmixcpp/safety/: CMakeLists.txt
